--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.kamja2">
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    package="com.example.kamja2" >
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-    <uses-feature android:name="android.hardware.camera" android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
     <uses-feature
         android:glEsVersion="0x00030000"
         android:required="true" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -23,52 +27,63 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Kamja2"
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31" >
 
-        tools:targetApi="31">
-        <meta-data android:name="com.kakao.sdk.AppKey" android:value="your_key" />
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="" />
+
+        <activity
+            android:name=".SelectMap"
+            android:exported="true"
+            android:label="@string/title_activity_select_map" >
+
+        </activity>
 
         <activity
             android:name=".LoginActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-
             </intent-filter>
         </activity>
-        <activity android:name=".heart"
-            android:label="heart"></activity>
-        <activity android:name=".chatbot"
-            android:label="chatbot"></activity>
+        <activity
+            android:name=".heart"
+            android:label="heart" />
+        <activity
+            android:name=".chatbot"
+            android:label="chatbot" />
+        <activity
+            android:name=".mypage"
+            android:label="mypage" />
 
-
-        <activity android:name=".mypage"
-            android:label="mypage"></activity>
-        <activity android:name=".map"
-            android:label="map"/>
-        <activity android:name=".Search_home"/>
-        <activity android:name=".SearchListActivity"/>
-        <activity android:name=".RecipeDocActivity"/>
-
-        <activity android:name=".MainActivity">
-
+        <activity android:name=".Search_home" />
+        <activity android:name=".SearchListActivity" />
+        <activity android:name=".RecipeDocActivity" />
+        <activity android:name=".MainActivity" >
         </activity>
-        <activity android:name=".JoinFirstActivity">
-
+        <activity android:name=".JoinFirstActivity" >
         </activity>
-        <activity android:name=".JoinSecondActivity">
-
+        <activity android:name=".JoinSecondActivity" >
         </activity>
-        <activity android:name=".JoinLastActivity">
-
+        <activity android:name=".JoinLastActivity" >
         </activity>
-        <activity android:name=".ReviewActivity">
-
+        <activity android:name=".ReviewActivity" >
         </activity>
-
     </application>
-
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
 </manifest>
